2009-07-08  Lin Ma  <Lin.Ma@Sun.COM>

	* common/nwamui_ncu.c (get_nwam_ncu_handle), (nwamui_ncu_clone):
	Fixed doo:9709
	* daemon/status_icon.c (daemon_info), (daemon_active_ncp_changed),
	(daemon_active_env_changed):
	Reset change notify.
	
2009-07-07  Darren Kenny  <darren.kenny@sun.com>

	* common/nwamui_wifi_net.c: 
	  Update to handle the wep key index/slot and pass when setting the
	  wep key.
	* daemon/status_icon.c: 
	  Fixed a stupid error where ncu could be NULL due to use of local
	  scope variable masking outer.
	* nwam_core/usr/include/libnwam.h:
	  Update to latest header to get API changes.

2009-07-06  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/capplet-utils.c (capplet_util_object_notify_cb):
	* capplet/capplet-utils.h: Update for tree store.
	* capplet/nwam_location_dialog.c
	(nwam_location_connection_enabled_toggled_cb), (on_button_clicked),
	(tree_model_foreach_find_enabled_env): Removed manual row changed
	call since it has used capplet_util_object_notify_cb.
	* capplet/nwam_vpn_pref_dialog.c
	(capplet_tree_model_row_changed_func), (nwam_compose_tree_view),
	(refresh), (nwam_vpn_selection_changed), (on_nwam_enm_notify_cb):
	Update gui widgets once enm changes.
	* common/nwamui_enm.c (nwamui_enm_set_active): Add notify for active.

2009-07-06  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/nwam_vpn_pref_dialog.c (nwam_compose_tree_view),
	(vpn_pref_clicked_cb), (enm_name_cell_edited):
	* common/nwamui_enm.c (nwamui_enm_class_init),
	(nwamui_enm_destroy): Fixed doo:9847. And update start/stop rules label
	after enm name changes.

2009-07-03  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/nwam_wireless_chooser.c (nwam_compose_wifi_chooser_view),
	(nwam_wireless_chooser_init), (nwam_wifi_scan_start): Fixed runtime
	critical warnings and dup wlan items.
	* common/nwamui_daemon.h:
	* common/nwamui_daemon.c (nwamui_daemon_class_init),
	(nwamui_daemon_set_property), (find_compare_wifi_net_with_name),
	(dispatch_scan_results_if_wireless): Remove daemon status signal, uses